hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/switch.php.exp
File "switch.php", line 7, characters 5-74:
Expression trees do not support `switch` statements. Consider using `if`/`else if`/`else` instead. (Parsing[1002])
